# mechanistic-steering-vlas

./: .gitignore  README.md  pyproject.toml
openpi/experiments/: __init__.py
openpi/experiments/configs/: base.yaml
openpi/experiments/configs/interventions/: dictionaries.yaml
openpi/experiments/configs/runs/: example_run.yaml
openpi/experiments/scripts/: __init__.py  run_eval.py  utils.py
openpi/ffn_value_vectors/scripts/: run_ffn_value_projection.py
openvla/ffn_value_vectors/scripts/: run_ffn_value_projection.py
openvla/libero_experiments/configs/: base.yaml
openvla/libero_experiments/configs/interventions/: dictionaries.yaml
openvla/libero_experiments/configs/runs/: example_run.yaml
openvla/libero_experiments/scripts/: run_eval.py
setup/openpi/: environment.openpi.yml
setup/openvla/: environment.openvla.yml  setup.sh
src/ffn_value_vectors/: __init__.py  action_tokenizer.py  extract.py
src/libero_experiments/: __init__.py  config.py  eval_libero.py  hooks.py  interventions.py  libero_utils.py  logging_utils.py  model.py  utils.py
src/openpi/models/: gemma_fast_hooked.py  lora.py  model.py  pi0_fast_hooked.py  tokenizer.py
src/openpi/policies/: policy_config.py  policy_hooked.py  ur5_policy.py
src/openpi/shared/: download.py
src/openpi/training/: checkpoints.py  config.py  data_loader.py
src/openpi_ffn_value_vectors/: __init__.py  pi0_extract.py
