[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vla-mech-interp"
version = "0.1.0"
description = "Mechanistic interpretability for steering VLA models - OpenVLA (LIBERO) and π₀"
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
